--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <div class="btn btn-primary" (click)=playMusic>Click me</div>
+  <div class="btn btn-primary" (click)="play()">Click me</div>
 </div>
