--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,11 +9,13 @@
 .nav-view {
   width: 100vw;
   height: 100vh;
+  background-color: rgb(0, 150, 150);
 }
 
 .side-open {
   box-shadow: none;
   width: 250px;
+  background-color: rgb(0, 99, 99);
 }
 
 #menu-toggle {
