--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,3 +26,16 @@
 .nav-content {
   background-color: rgb(0, 150, 150);
 }
+
+.list-group {
+  padding: 5%;
+}
+.list-group-item {
+  text-align: center;
+  border-color: rgb(0, 255, 112);
+  background-color: rgb(219, 56, 174);
+  transition: background-color 0.25s ease;
+}
+.list-group-item:hover {
+  background-color: rgb(255, 65, 107);
+}
