scrap this sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
 
     <mat-sidenav class="side-open" #sidenav [mode]="'push'">
       <ul class="list-group sidebar-list">
-        <li class="list-group-item">Item 1</li>
-        <li class="list-group-item">Item 2</li>
-        <li class="list-group-item">Item 3</li>
-        <li class="list-group-item">Item 4</li>
-        <li class="list-group-item">Item 5</li>
+        <li class="list-group-item"><b>Item 1</b></li>
+        <li class="list-group-item"><b>Item 2</b></li>
+        <li class="list-group-item"><b>Item 3</b></li>
+        <li class="list-group-item"><b>Item 4</b></li>
+        <li class="list-group-item"><b>Item 5</b></li>
       </ul>
     </mat-sidenav>
 
