--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,15 +27,13 @@
   background-color: rgb(0, 150, 150);
 }
 
-.list-group {
-  padding: 5%;
-}
-.list-group-item {
-  text-align: center;
-  border-color: rgb(0, 255, 112);
-  background-color: rgb(219, 56, 174);
+.sidebar-item {
+  margin: auto;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 99, 99);
   transition: background-color 0.25s ease;
 }
-.list-group-item:hover {
-  background-color: rgb(255, 65, 107);
+.sidebar-item:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(0, 150, 150);
 }
