--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,6 +21,12 @@
 #menu-toggle {
   padding-left: 3%;
   padding-top: 2%;
+  color: black;
+  transition: background-color 1.0s ease;
+}
+
+#menu-toggle:hover {
+  color: white;
 }
 
 .nav-content {
@@ -32,7 +38,9 @@
   background-color: rgb(0, 99, 99);
   transition: background-color 0.25s ease;
   color: white;
-  font-family: 'Birdseye', sans-serif;
+  font-family: "Oswald", sans-serif !important;
+  font-size: 18pt !important;
+  font-weight: lighter !important;
 }
 .sidebar-item:hover {
   color: rgb(0, 0, 0);
