--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,7 +22,7 @@
   padding-left: 3%;
   padding-top: 2%;
   color: black;
-  transition: background-color 1.0s ease;
+  transition: color 0.25s ease;
 }
 
 #menu-toggle:hover {
@@ -38,7 +38,7 @@
   background-color: rgb(0, 99, 99);
   transition: background-color 0.25s ease;
   color: white;
-  font-family: "Oswald", sans-serif !important;
+  font-family: "Roboto", sans-serif !important;
   font-size: 18pt !important;
   font-weight: lighter !important;
 }
