--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,7 @@
   <mat-sidenav-container class="nav-view" [hasBackdrop]="false">
 
     <mat-sidenav class="side-open" #sidenav [mode]="'push'">
-      <mat-nav-list>
-        <mat-list-item class="sidebar-item">Item 1</mat-list-item>
-        <mat-list-item class="sidebar-item">Item 2</mat-list-item>
-        <mat-list-item class="sidebar-item">Item 3</mat-list-item>
-        <mat-list-item class="sidebar-item">Item 4</mat-list-item>
-        <mat-list-item class="sidebar-item">Item 5</mat-list-item>
-      </mat-nav-list>
+      <app-sidebar></app-sidebar>
     </mat-sidenav>
 
     <mat-sidenav-content class="nav-content">
