Fixed routing module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 
     <mat-sidenav-content class="nav-content">
       <i class="fas fa-bars fa-3x" id="menu-toggle" (click)="sidenav.toggle()"></i>
+      <router-outlet></router-outlet>
     </mat-sidenav-content>
 
   </mat-sidenav-container>
