--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,13 +1,12 @@
 .sidebar-item {
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 99, 99);
-  transition: background-color 0.25s ease;
   color: white;
+  background-color: rgb(0, 99, 99);
   font-family: "Roboto", sans-serif !important;
   font-size: 18pt !important;
   font-weight: lighter !important;
+  transition: all 0.25s ease;
 }
 .sidebar-item:hover {
-  color: rgb(0, 0, 0);
+  color: black;
   background-color: rgb(0, 150, 150);
 }
