--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <div class="view">
   <mat-sidenav-container class="nav-view" [hasBackdrop]="false">
-
     <mat-sidenav class="side-open" #sidenav [mode]="'push'">
       <app-sidebar></app-sidebar>
     </mat-sidenav>
 
     <mat-sidenav-content class="nav-content">
       <i class="fas fa-bars fa-3x" id="menu-toggle" (click)="sidenav.toggle()"></i>
+      <h1>Super Smash Bros. Melee</h1>
     </mat-sidenav-content>
-
   </mat-sidenav-container>
 </div>
