--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,6 +23,8 @@
   margin-top: 2%;
   color: black;
   transition: color 0.25s ease;
+  position: absolute;
+  z-index: 3;
 }
 
 #menu-toggle:hover {
@@ -31,5 +33,16 @@
 }
 
 .nav-content {
-  background-color: rgb(0, 150, 150);
+  /* background-color: rgb(0, 150, 150); */
+  background-color: white;
+}
+
+.landing{
+  margin-left: 10%;
+  width: 100vw;
+}
+
+.logo{
+  width: 10%;
+  margin: auto;
 }
