--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,7 @@
+<div class="logo-sidebar">
+  <img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found">
+</div>
+
 <mat-nav-list>
   <mat-list-item class="sidebar-item">Item 1</mat-list-item>
   <mat-list-item class="sidebar-item">Item 2</mat-list-item>
