--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,7 +34,7 @@
 
 .nav-content {
   /* background-color: rgb(0, 150, 150); */
-  background-color: white;
+  background-color: gray;
 }
 
 .landing{
