--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<div class="logo-sidebar">
-  <img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found">
-</div>
+<mat-grid-list cols="1" rowHeight="3:1">
+  <mat-grid-tile class="logo-sidebar"><img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found"></mat-grid-tile>
+</mat-grid-list>
 
 <mat-nav-list>
   <mat-list-item class="sidebar-item">Item 1</mat-list-item>
