Moved the toggle button into it's own component

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -1,6 +1,4 @@
-<div class="row" id="sidebar-toggle">
-  <i class="fas fa-bars fa-3x" id="menu-toggle" (click)="toggleSidebar()"></i>
-</div>
+<app-sidebar-toggle-button></app-sidebar-toggle-button>
 <div>
   <p>Maker loaded.</p>
 </div>
