--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,20 +5,18 @@
 #FF416B rgb(255, 65, 107)
 #DB38AE rgb(219, 56, 174)
 */
-
+.mat-drawer-content{
+  background-image: url('../assets/landing-backdrop.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .nav-view {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(0, 150, 150);
 }
 
 .side-open {
   box-shadow: none;
   width: 250px;
   background-color: rgb(0, 99, 99);
-}
-
-.nav-content {
-  /* background-color: rgb(0, 150, 150); */
-  background-color: gray;
 }
