--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -22,11 +22,14 @@
     </div>
   </div>
   <div class="spacer5"></div>
-  <div class="row">
-    <div class="col">
+  <div class="row" style="margin: auto;">
+    <div class="col-2">
+      <img src="assets/note2.svg" id="note2">
+    </div>
+    <div class="col-8">
       <img src="assets/landing-keyboard.svg" id="keyboard-art">
     </div>
-    <div class="col">
+    <div class="col-2">
       <img src="assets/note1.svg" id="note1">
     </div>
   </div>
