--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,37 +1,38 @@
-<div id="sidebar-button">
-  <app-sidebar-toggle-button></app-sidebar-toggle-button>
-</div>
-<div class="container">
-  <div class="spacer5"></div>
-  <div class="row landing-row">
-    <img src="assets/ottava-logo-full.svg" id="landing-logo">
+<div class="view">
+  <div id="sidebar-button">
+    <app-sidebar-toggle-button></app-sidebar-toggle-button>
   </div>
-  <div class="spacer5"></div>
-  <div class="row landing-row">
-    <h1>Compose. Share. Discover.</h1>
+  <div class="container">
+    <div class="spacer5"></div>
+    <div class="row landing-row">
+      <img src="assets/ottava-logo-full.svg" id="landing-logo">
+    </div>
+    <div class="spacer5" id="content-spacer"></div>
+    <div class="row landing-row">
+      <h1>Compose. Share. Discover.</h1>
+    </div>
+    <div class="row landing-row">
+      <h5>Create your own unique musical pieces with our simple music maker and share it for others to hear.</h5>
+    </div>
+    <div class="row spacer3" id="landing-logs">
+      <div class="col">
+        <div class="btn btn-lg btn-primary" id="signup">Sign Up</div>
+      </div>
+      <div class="col">
+        <div class="btn btn-lg btn-success" id="login">Log In</div>
+      </div>
+    </div>
+    <div class="spacer5"></div>
+    <div class="row" style="margin: auto;">
+      <div class="col-2">
+        <img src="assets/note2.svg" id="note2">
+      </div>
+      <div class="col-8">
+        <img src="assets/landing-keyboard.svg" id="keyboard-art">
+      </div>
+      <div class="col-2">
+        <img src="assets/note1.svg" id="note1">
+      </div>
+    </div>
   </div>
-  <div class="row landing-row">
-    <h5>Create your own unique musical pieces with our simple music maker and share it for others to hear.</h5>
-  </div>
-  <div class="row spacer3" id="landing-logs">
-    <div class="col">
-      <div class="btn btn-lg btn-primary" id="signup">Sign Up</div>
-    </div>
-    <div class="col">
-      <div class="btn btn-lg btn-success" id="login">Log In</div>
-    </div>
-  </div>
-  <div class="spacer5"></div>
-  <div class="row" style="margin: auto;">
-    <div class="col-2">
-      <img src="assets/note2.svg" id="note2">
-    </div>
-    <div class="col-8">
-      <img src="assets/landing-keyboard.svg" id="keyboard-art">
-    </div>
-    <div class="col-2">
-      <img src="assets/note1.svg" id="note1">
-    </div>
-  </div>
-
 </div>
