setup maker route

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -1,9 +1,5 @@
-<div class="mdc-layout-grid">
-  <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell--span-1 toggle">
-      <app-sidebar-toggle-button></app-sidebar-toggle-button>
-    </div>
-    <div class="mdc-layout-grid__cell--span-11">
-    </div>
+<div class="view">
+  <div id="sidebar-button">
+    <app-sidebar-toggle-button></app-sidebar-toggle-button>
   </div>
 </div>
