--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,7 @@
-<mat-grid-list cols="1" rowHeight="3:1.33">
-  <mat-grid-tile class="logo-sidebar"><img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found"></mat-grid-tile>
-</mat-grid-list>
+<mat-nav-list id="logo">
+  <mat-list-item routerLink="/" routerLinkActive="active" class="logo-sidebar"><img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found"></mat-list-item>
+</mat-nav-list>
 
 <mat-nav-list>
-  <mat-list-item class="sidebar-item">Item 1</mat-list-item>
-  <mat-list-item class="sidebar-item">Item 2</mat-list-item>
-  <mat-list-item class="sidebar-item">Item 3</mat-list-item>
-  <mat-list-item class="sidebar-item">Item 4</mat-list-item>
-  <mat-list-item class="sidebar-item">Item 5</mat-list-item>
+  <mat-list-item routerLink="/maker" routerLinkActive="active" class="sidebar-item">Maker</mat-list-item>
 </mat-nav-list>
