Added test code for connecting audio nodes. Currently non-functioning

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -1,7 +1,7 @@
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell--span-1 toggle">
-      <app-sidebar-toggle-button></app-sidebar-toggle-button>
+      <button mat-button (click)="onClick()">Action</button>
     </div>
     <div class="mdc-layout-grid__cell--span-11">
     </div>
