--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -2,7 +2,15 @@
   <div id="sidebar-button">
     <app-sidebar-toggle-button></app-sidebar-toggle-button>
     <div class="container">
-      <button class="btn btn-primary" mat-button (click)="onClick()">Action</button>
+      <div ngbDropdown>
+        <button class="btn btn-outline-primary" id="dropdownConfig" ngbDropdownToggle><strong>{{type}}</strong></button>
+        <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+          <button class="dropdown-item" *ngFor="let type of types" (click)="updateSelection(type)">{{type}}</button>
+        </div>
+      </div>
+      <div class="octave">
+        <h1>{{octave}}</h1>
+      </div>
     </div>
   </div>
 </div>
