--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -3,11 +3,12 @@
     <app-sidebar-toggle-button></app-sidebar-toggle-button>
     <div class="container">
       <div ngbDropdown>
-        <button class="btn btn-outline-primary" id="dropdownConfig" ngbDropdownToggle><strong>{{type}}</strong></button>
+        <button class="btn btn-outline-primary" id="dropdownConfig" ngbDropdownToggle><strong>{{displayMessage}}</strong></button>
         <div ngbDropdownMenu aria-labelledby="dropdownConfig">
           <button class="dropdown-item" *ngFor="let type of types" (click)="updateSelection(type)">{{type}}</button>
         </div>
       </div>
+      <input type="number">
       <div class="octave">
         <h1>{{octave}}</h1>
       </div>
