Began work on a met

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -4,6 +4,7 @@
     <div class="container">
       <mat-grid-list cols="3" rowHeight="3:1">
         <mat-grid-tile>
+          <app-metronome></app-metronome>
           <mat-form-field>
             <mat-select placeholder="Synth type" [(value)]="type">
               <mat-option value="pwm">PWM</mat-option>
