Continued work on metronome.
Loop is currently not functioning

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -55,6 +55,9 @@
       <div class="row">
         <img src="assets/maker-keyboard.svg"/>
       </div>
+      <div class="row">
+        <app-metronome></app-metronome>
+      </div>
     </div>
   </div>
 </div>
