--- a/src/app/music-maker/metronome/metronome.component.html
+++ b/src/app/music-maker/metronome/metronome.component.html
@@ -1,6 +1,4 @@
-<div class="metronome">
-  <mat-form-field>
-    <input matInput type="number" [(ngModel)]="bpm" value="60" placeholder="BPM">
-  </mat-form-field>
-  <mat-button-toggle (click)="toggleMetronome()">Toggle Metronome at {{bpm}}</mat-button-toggle>
-</div>
+<mat-form-field class="metronome-settings">
+  <input matInput type="number" [(ngModel)]="bpm" value="60" placeholder="BPM">
+</mat-form-field>
+<mat-button-toggle #metToggle (click)="toggleMetronome(metToggle.checked)">Toggle Metronome at {{bpm}}</mat-button-toggle>
