--- a/src/app/music-maker/metronome/metronome.component.html
+++ b/src/app/music-maker/metronome/metronome.component.html
@@ -1,4 +1,4 @@
 <mat-form-field class="metronome-settings">
-  <input matInput type="number" [(ngModel)]="bpm" value="60" placeholder="BPM">
+  <input matInput type="number" [(ngModel)]="bpm" placeholder="BPM">
 </mat-form-field>
 <mat-button-toggle #metToggle (click)="toggleMetronome(metToggle.checked)">Toggle Metronome at {{bpm}}</mat-button-toggle>
