overhaul of maker layout

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -1,62 +1,69 @@
 <div class="view">
   <div id="sidebar-button">
     <app-sidebar-toggle-button></app-sidebar-toggle-button>
-    <div class="d-flex justify-content-between">
-      <div class="container">
-        <div class="maker-col" id="graphic-col">
-          <img src="assets/maker-keyboard.svg" id="maker-keyboard"/>
-        </div>
+  </div>
+  <div class="content">
+    <div class="row">
+      <div class="col maker-col" id="graphic-col">
+        <img src="assets/maker-keyboard.svg" id="maker-keyboard"/>
       </div>
-      <div class="maker-col" id="options-col">
-        <div class="flex-row-reverse options">
-          <div class="octave float-right">
+      <div class="col-4 maker-col" id="options-col">
+        <div class="row options justify-content-center top-row">
+          <div class="octave">
             <h1>Octave: {{octave - 1}}</h1>
           </div>
         </div>
-          <div class="flex-row-reverse options float-right">
-            <mat-form-field>
-              <mat-select placeholder="Type of Oscillator" [(value)]="oscType">
-                <mat-option value="">None</mat-option>
-                <mat-option value="fm">FM</mat-option>
-                <mat-option value="am">AM</mat-option>
-                <mat-option value="fat">Fat</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="flex-row-reverse options float-right">
-            <mat-form-field>
-              <mat-select placeholder="Wave type" [(value)]="type">
-                <mat-option value="sine">Sine</mat-option>
-                <mat-option value="square">Square</mat-option>
-                <mat-option value="sawtooth">Sawtooth</mat-option>
-                <mat-option value="triangle">Triangle</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="flex-row-reverse options">
-            <mat-form-field>
-              <mat-select placeholder="Frequency" [(value)]="frequency">
-                <mat-option value="1">1</mat-option>
-                <mat-option value="2">2</mat-option>
-                <mat-option value="3">3</mat-option>
-                <mat-option value="4">4</mat-option>
-                <mat-option value="5">5</mat-option>
-                <mat-option value="6">6</mat-option>
-                <mat-option value="7">7</mat-option>
-                <mat-option value="8">8</mat-option>
-                <mat-option value="9">9</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="flex-row-reverse options">
-            <mat-form-field>
-              <input matInput value="1" placeholder="Duration of notes (in seconds)" type="number" (keyup)="onKey($event)">
-            </mat-form-field>
-          </div>
-          <div class="flex-row-reverse">
-            <app-metronome></app-metronome>
-          </div>
+        <div class="row options justify-content-center">
+          <mat-form-field>
+            <mat-select placeholder="Type of Oscillator" [(value)]="oscType">
+              <mat-option value="">None</mat-option>
+              <mat-option value="fm">FM</mat-option>
+              <mat-option value="am">AM</mat-option>
+              <mat-option value="fat">Fat</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="row options justify-content-center">
+          <mat-form-field>
+            <mat-select placeholder="Wave type" [(value)]="type">
+              <mat-option value="sine">Sine</mat-option>
+              <mat-option value="square">Square</mat-option>
+              <mat-option value="sawtooth">Sawtooth</mat-option>
+              <mat-option value="triangle">Triangle</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="row options justify-content-center">
+          <mat-form-field>
+            <mat-select placeholder="Frequency" [(value)]="frequency">
+              <mat-option value="1">1</mat-option>
+              <mat-option value="2">2</mat-option>
+              <mat-option value="3">3</mat-option>
+              <mat-option value="4">4</mat-option>
+              <mat-option value="5">5</mat-option>
+              <mat-option value="6">6</mat-option>
+              <mat-option value="7">7</mat-option>
+              <mat-option value="8">8</mat-option>
+              <mat-option value="9">9</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="row options justify-content-center">
+          <mat-form-field>
+            <input matInput value="1" placeholder="Duration of notes (in seconds)" type="number" (keyup)="onKey($event)">
+          </mat-form-field>
+        </div>
+        <div class="row options justify-content-center">
+          <mat-form-field class="metronome-settings">
+            <input matInput type="number" [(ngModel)]="bpm" (change)="updateBPM()" placeholder="BPM">
+          </mat-form-field>
+        </div>
+        <div class="row options justify-content-center">
+          <mat-button-toggle #metToggle (click)="toggleMetronome(metToggle.checked)">
+            Toggle Metronome
+          </mat-button-toggle>
         </div>
       </div>
     </div>
+  </div>
 </div>
