--- a/src/app/music-maker/maker/maker.component.css
+++ b/src/app/music-maker/maker/maker.component.css
@@ -1,6 +1,8 @@
 #sidebar-button{
   margin-left: 3%;
   margin-top: 3%;
+  z-index: 1;
+  position: absolute;
 }
 .mat-slider-horizontal .mat-slider-track-fill{
   background-color: black;
@@ -9,24 +11,32 @@
   background-color: gray;
 }
 #graphic-col{
-
-}
-#options-col{
-
-}
-#maker-keyboard{
-  top: 50%;
-  width: 50%;
-  height: auto;
-  position: absolute;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.maker-col{
   height: 100vh !important;
-
+  text-align: center;
 }
-.container{
+
+#options-col{
+  height: 100vh !important;
+  background-color: gray;
+}
+
+#maker-keyboard{
+  width: 80%;
+  margin-top: 30vh;
+}
+
+.content{
   position: relative;
-  height: 100vh !important
+  height: 100vh !important;
+  margin-left: 5%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.top-row{
+  margin-top: 5%;
+}
+
+.view{
+      background-color: #00ff70 !important;
 }
