--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,9 @@
 <mat-nav-list id="logo">
-  <mat-list-item routerLink="/" routerLinkActive="active" class="logo-sidebar"><img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found"></mat-list-item>
+  <mat-list-item [disableRipple]="true" routerLink="/" routerLinkActive="active" class="logo-sidebar"><img class="logo" src="../../assets/ottava-logo.svg" alt="Logo Not Found"></mat-list-item>
+</mat-nav-list>
+
+<mat-nav-list>
+  <mat-list-item routerLink="/login" routerLinkActive="active" class="sidebar-item">Sign In</mat-list-item>
 </mat-nav-list>
 
 <mat-nav-list>
