Configure project to use sass

--- a/src/app/music-maker/maker/maker.component.html
+++ b/src/app/music-maker/maker/maker.component.html
@@ -59,7 +59,7 @@
           </mat-form-field>
         </div>
         <div class="row options justify-content-center">
-          <mat-button-toggle #metToggle (click)="toggleMetronome(metToggle.checked)">
+          <mat-button-toggle #metToggle color="primary" (click)="toggleMetronome(metToggle.checked)">
             Toggle Metronome
           </mat-button-toggle>
         </div>
