--- a/src/app/music-maker/maker/maker.component.scss
+++ b/src/app/music-maker/maker/maker.component.scss
@@ -1,3 +1,7 @@
+@import '~@angular/material/theming';
+
+@include mat-core();
+
 #sidebar-button{
   margin-left: 3%;
   margin-top: 3%;
@@ -17,7 +21,7 @@
 
 #options-col{
   height: 100vh !important;
-  background-color: gray;
+  background-color: white;
 }
 
 #maker-keyboard{
@@ -40,3 +44,10 @@
 .view{
       background-color: #00ff70 !important;
 }
+
+$primary: mat-palette($mat-indigo);
+
+mat-button-toggle {
+    background-color: mat-color($primary) !important;
+    color: mat-color($primary, default-contrast) !important;
+  }
